# waterfall-table

./: .gitignore  README.md  table1-4-pipeline.txt  waterfall.p4
FastClick/: replay_20160121-130000.click  replay_20160218-133000.click  replay_20160317-140000.click  replay_20190117-140000.click  replay_alex.click  replay_alex_multicore.click  replay_full_dataset.click  replay_single_burst_test.click  replay_single_test.click  replay_small_burst_test.click  replay_small_test.click  replay_smaller_test.click  replay_test.click  simple_replay_pcap.click
ptf/: full-test.py  period_fetch.py  test.py
waterfall/: .gitignore  CMakeLists.txt  run_model.sh  setup.sh  waterfall.p4
waterfall-fcm/: .gitignore  control_plane.py  fcm.p4  setup_switch.py  waterfall_fcm.p4
waterfall-fcm-small/: .gitignore  setup_switch.py
waterfall-fcm-small/fcm/: fcm.p4
waterfall-fcm-small/ptf/: EM_ctypes.py  control_plane.py  utils.py  waterfall_fcm_unittest.py
waterfall-fcm-small/ptf/EM/: EM_FSD.cpp  common.h  compile_commands.json
waterfall-fcm-small/ptf/EM/.cache/clangd/index/: EM_FSD.cpp.19D7828D18E6F583.idx
waterfall-fcm-small/waterfall/: waterfall.p4
waterfall-fcm-small/waterfall_fcm/tofino/: bf-rt.json  events.json  manifest.json  source.json  waterfall_fcm.p4pp
waterfall-fcm-small/waterfall_fcm/tofino/pipe/: context.json  waterfall_fcm.bfa  waterfall_fcm.dynhash.json  waterfall_fcm.prim.json
waterfall-fcm-small/waterfall_fcm/tofino/pipe/graphs/: 0_table_flow_graph_ingress.dot  FcmEgress.dot  FcmEgressDeparser.dot  WaterfallIngress.dot  WaterfallIngressDeparser.dot  dep.json  power_graph.dot  program_graph.dot  table_dep_graph_placement_0.dot
waterfall-fcm-small/waterfall_fcm/tofino/pipe/logs/: mau.json  metrics.json  phv.json  power.json  resources.json  resources_deparser.json
waterfall-fcm-srctuple/: CMakeLists.txt  run_model.sh  run_switchd.sh  setup_switch.py
waterfall-fcm-srctuple/control_plane/: CMakeLists.txt  ControlPlane.cpp  ControlPlane.hpp  EM_WFCM.hpp  common.h  main.cpp  pcap_reader.hpp  waterfall.cpp  waterfall.hpp
waterfall-fcm-srctuple/fcm/: fcm.p4
waterfall-fcm-srctuple/p4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  ports.json  waterfall.p4
waterfall-fcm-srctuple/p4/common/: constants.p4
waterfall-fcm-srctuple/p4/fcm/: fcm.p4
waterfall-fcm-srctuple/p4/waterfall/: waterfall.p4
waterfall-fcm-srctuple/p4/waterfall/tofino/: bf-rt.json  events.json  manifest.json  source.json  waterfall.conf  waterfall.p4pp
waterfall-fcm-srctuple/p4/waterfall/tofino/pipe/: context.json  waterfall.bfa  waterfall.dynhash.json  waterfall.prim.json
waterfall-fcm-srctuple/p4/waterfall/tofino/pipe/graphs/: 0_table_flow_graph_ingress.dot  EmptyEgress.dot  EmptyEgressDeparser.dot  EmptyEgressParser.dot  WaterfallIngress.dot  WaterfallIngressDeparser.dot  dep.json  ingress.power.dot  power_graph.dot  program_graph.dot  table_dep_graph_placement_0.dot
waterfall-fcm-srctuple/p4/waterfall/tofino/pipe/logs/: mau.json  metrics.json  phv.json  power.json  resources.json  resources_deparser.json
waterfall-fcm-srctuple/ptf/: EM_ctypes.py  control_plane.py  fcm_utils.py  test_fcm.py  utils.py  waterfall_fcm_unittest.py  waterfall_unittests.py
waterfall-fcm-srctuple/ptf/EM/: CMakeLists.txt  EM_FSD.cpp  EM_WFCM.cpp  common.h
waterfall-fcm-srctuple/ptf/EM/.cache/clangd/index/: common.h.DC4582DBF09C82B6.idx
waterfall-fcm-srctuple/waterfall/: waterfall.p4
waterfall-fcm-srctuple/waterfall_fcm/tofino/: bf-rt.json  events.json  manifest.json  source.json  waterfall_fcm.conf  waterfall_fcm.p4pp
waterfall-fcm-srctuple/waterfall_fcm/tofino/pipe/: context.json  waterfall_fcm.bfa  waterfall_fcm.dynhash.json  waterfall_fcm.prim.json
waterfall-fcm-srctuple/waterfall_fcm/tofino/pipe/graphs/: 0_table_flow_graph_ingress.dot  1_table_flow_graph_egress.dot  FcmEgress.dot  FcmEgressParser.dot  WaterfallIngress.dot  WaterfallIngressParser.dot  dep.json  egress.power.dot  ingress.power.dot  placement_graph.dot  power_graph.dot  program_graph.dot  table_dep_graph_placement_0.dot
waterfall-fcm-srctuple/waterfall_fcm/tofino/pipe/logs/: mau.json  metrics.json  phv.json  power.json  resources.json  resources_deparser.json
waterfall-fcm/fcm/: fcm.p4
waterfall-fcm/ptf/: EM_ctypes.py  control_plane.py  ctype_test.py  fcm_utils.py  test.py  test_fcm.py  utils.py  waterfall_fcm_unittest.py  waterfall_unittests.py
waterfall-fcm/ptf/EM/: CMakeLists.txt  EM_FSD.cpp  common.h  test.cpp
waterfall-fcm/waterfall/: waterfall.p4
waterfall/control_plane/: CMakeLists.txt  ControlPlane.cpp  ControlPlane.hpp  main.cpp  pcap_reader.hpp  simple_digest.cpp  simple_digest.hpp  waterfall.cpp  waterfall.hpp
waterfall/p4/: waterfall.p4
waterfall/ptf/: full-test.py  test.py
