cmake_minimum_required(VERSION 3.12)
project(EM_FSD)

# set(CMAKE_CXX_STANDARD 23)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

add_library(sse4_2 INTERFACE IMPORTED)
add_library(sse4_1 INTERFACE IMPORTED)
add_library(sse3 INTERFACE IMPORTED)
add_library(sse2 INTERFACE IMPORTED)
if(MSVC)
  target_compile_options(sse4_2 INTERFACE /arch:SSE4.2)
  target_compile_options(sse4_1 INTERFACE /arch:SSE4.1)
  target_compile_options(sse3 INTERFACE /arch:SSE3)
  target_compile_options(sse2 INTERFACE /arch:SSE3)
else()
  target_compile_options(sse4_2 INTERFACE -msse4.2)
  target_compile_options(sse4_1 INTERFACE -msse4.1)
  target_compile_options(sse3 INTERFACE -msse3)
  target_compile_options(sse2 INTERFACE -msse2)
endif()

include_directories(${CMAKE_SOURCE_DIR})
add_library(EM_FSD SHARED EM_FSD.cpp)
